samples/_failures_safe/1761614006_dcb483_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be30dd36.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_be30dd36.c:171:20: error: expected ‘)’ at end of input
  171 |         while (edge
      |               ~    ^
      |                    )
./samples/SAFE/__tmp_be30dd36.c:171:9: error: expected declaration or statement at end of input
  171 |         while (edge
      |         ^~~~~
./samples/SAFE/__tmp_be30dd36.c:171:9: error: expected declaration or statement at end of input
